modified:   app/Http/Controllers/IndexController.php 	modified:   app/Http/Controllers/OrderMenuController.php 	new file:   public/assets/icons/cib_instagram.svg 	new file:   public/assets/icons/cib_tiktok.svg 	new file:   public/assets/icons/shopping-cart.svg 	new file:   public/assets/img/menu-empty.svg 	modified:   resources/css/app.css 	modified:   resources/js/app.js 	new file:   resources/views/order/layouts/main.blade.php 	modified:   resources/views/order/order.blade.php 	new file:   resources/views/order/partials/card.blade.php 	modified:   resources/views/order/partials/footer.blade.php 	modified:   resources/views/order/partials/navbar.blade.php 	modified:   routes/web.php

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,18 @@
 @tailwind components;
 @tailwind utilities;
 
+
+:root {
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+
 .swiper-button-next::after {
   display: none;
 }
